Apresentacao do ggplot2

--- a/curso_intro_datascience/bib/bibliografia.bib
+++ b/curso_intro_datascience/bib/bibliografia.bib
@@ -137,4 +137,12 @@
   timestamp = {2019.03.20},
 }
 
+@incollection{Wilkinson2012,
+  title={The grammar of graphics},
+  author={Wilkinson, Leland},
+  booktitle={Handbook of Computational Statistics},
+  pages={375--414},
+  year={2012},
+  publisher={Springer}
+}
 @Comment{jabref-meta: databaseType:biblatex;}
