--- a/curso_intro_datascience/Apostilas/BP_Curso_TecComp_00_c06_2019.Rnw
+++ b/curso_intro_datascience/Apostilas/BP_Curso_TecComp_00_c06_2019.Rnw
@@ -113,5 +113,45 @@ labs(x="Sepal length", y="Petal Length")
 plot(g2)
 @
 
+Podemos fazer uma separação por variáveis categóricas e apresentá-las com cores distintas. Na \textbf{aes()} adicionamos o parâmetro $color = Species$. Para o nosso exemplo, a variável categórica é \textbf{Species}.
+
+\begin{figure}[htpb!]
+	\centering
+	\includegraphics[width=0.7\linewidth]{../figs/BP_Curso_TecComp_00_2019_f06-06}
+	\caption{Relação de comprimento e largura das Sépalas}
+	\label{fig:f06-06}
+\end{figure}
+
+\newpage
+
+O exemplo para construir a figura \ref{fig:f06-06} está exemplificado abaixo:
+
+<<eval= false, echo=true>>=
+g3 <- ggplot(iris, aes(x = Sepal.Length, y = Sepal.Width, color = Species)) + 
+geom_point() +
+ggtitle("Relação entre comprimento e largura das sépalas por espécie") +
+labs(x="Comprimento da Sépala", y="Largura da Sépala", color = "Espécie")
+plot(g3)
+@
+
+Podemos incluir mais uma camada e criar vários ambientes de plot dividindo o ambiente principal. Para que isso seja possível utilizaremos a função \textbf{facet.wrap()}.
+
+\begin{figure}[htpb!]
+	\centering
+	\includegraphics[width=0.7\linewidth]{../figs/BP_Curso_TecComp_00_2019_f06-07}
+	\caption{Relação entre comprimento e largura das sépalas por espécie}
+	\label{fig:f06-07}
+\end{figure}
+
+O código para gerar o gráfico da figura \ref{fig:f06-07} está exposto abaixo:
+
+<<eval=false, echo=true>>=
+gf4 <- ggplot(iris, aes(x = Sepal.Length, y = Sepal.Width, color = Species)) + 
+geom_point() +
+facet_wrap(~Species) +
+ggtitle("Relação entre o comprimento e a largura das sépalas") +
+labs(x="Comprimento da Sépala", y="Largura da Sépala", color = "Espécie")
+plot(gf4)
+@
 
 	\section{shiny}
