--- a/curso_intro_datascience/Apostilas/BP_Curso_TecComp_00_c06_2019.Rnw
+++ b/curso_intro_datascience/Apostilas/BP_Curso_TecComp_00_c06_2019.Rnw
@@ -12,7 +12,7 @@
 \chapter{Aula 6 - Apresentando Resultados}
 
 	\section{ggplot}
-	O pacote \textbf{ggplot2} é uma ferramente de visualização gráfica bastante útil para apresentasação de dados com muitos componentes. A estrutura de construção de gráficos utilizando o ggplot2 é basicamente definir os dados a serem plotados e o sistema de coordenadas. Uma boa forma de entender como funciona o \textbf{ggplot2} é por meio da metáfora de camadas. Cada detalhe do gráfico é uma camada de comando definido a partir das camadas principais(dados e coordenadas).
+	O pacote \textbf{ggplot2} é uma ferramenta de visualização gráfica bastante útil para apresentação de dados com muitos componentes. A estrutura de construção de gráficos utilizando o ggplot2 é basicamente definir os dados a serem plotados e o sistema de coordenadas. Uma boa forma de entender como funciona o \textbf{ggplot2} é por meio da metáfora de camadas. Cada detalhe do gráfico é uma camada de comando definido a partir das camadas principais(dados e coordenadas).
 	
 	A figura abaixo mostra as principais camadas:
 
