--- a/curso_intro_datascience/bib/bibliografia.bib
+++ b/curso_intro_datascience/bib/bibliografia.bib
@@ -137,12 +137,32 @@
   timestamp = {2019.03.20},
 }
 
-@incollection{Wilkinson2012,
-  title={The grammar of graphics},
-  author={Wilkinson, Leland},
-  booktitle={Handbook of Computational Statistics},
-  pages={375--414},
-  year={2012},
-  publisher={Springer}
+@Book{Xie2017,
+  author    = {Xie, Yihui},
+  title     = {Dynamic Documents with R and knitr},
+  year      = {2017},
+  publisher = {Chapman and Hall/CRC},
+  owner     = {rivero},
+  timestamp = {2019.05.02},
 }
+
+@WWW{Allaire2016,
+  author       = {Allaire, J and Cheng, Joe and Xie, Yihui and McPherson, Jonathan and Chang, Winston and Allen, Jeff and Wickham, Hadley and Atkins, Aron and Hyndman, Rob and Arslan, Ruben},
+  title        = {rmarkdown: Dynamic Documents for R},
+  year         = {2016},
+  url          = {https://rmarkdown.rstudio.com/},
+  organization = {Rstudio},
+  urldate      = {2019-05-02},
+  owner        = {rivero},
+  timestamp    = {2019.05.02},
+}
+
+@Misc{Xie2016,
+  author    = {Xie, Y},
+  title     = {knitr: A general-purpose package for dynamic report generation in R [Software]},
+  year      = {2016},
+  owner     = {rivero},
+  timestamp = {2019.05.02},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
